[package]
name = "dipr"
description = """
Converts the National Weather Service's (NWS) Digital Instantaneous Precipitation Rate (DIPR) radar
product from its native data format into more common vector GIS formats
"""
version = "0.1.0"
license = "Apache-2.0"
authors = ["Bradley Gannon <bradley@bradleygannon.com>"]
edition = "2024"
repository = "https://github.com/bmgxyz/dipr"
readme = "README.md"
keywords = ["gis", "geo", "geography", "geospatial"]
categories = ["science::geo", "command-line-utilities"]

[dependencies]
bzip2-rs = "0.1.2"
clap = { version = "4.5.35", features = ["derive"] }
chrono = { version = "0.4.40", default-features = false, features = ["alloc"] }
geo = { version = "0.30.0", default-features = false }
geojson = "0.24.2"
shapefile = "0.7.0"
uom = "0.36.0"
