[package]
name = "digital-precip-rate"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Bradley Gannon <bradley@bradleygannon.com>"]
edition = "2024"

[dependencies]
bzip2-rs = "0.1.2"
chrono = { version = "0.4.40", default-features = false, features = ["alloc"] }
geo = { version = "0.30.0", default-features = false }
uom = "0.36.0"
