[package]
name = "dipr"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
digital-precip-rate = { path = "../digital-precip-rate" }
geojson = "0.24.2"
geo = { version = "0.30.0", default-features = false }
shapefile = "0.7.0"
uom = "0.36.0"
